# ethereum-client-simplified

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
src/: CPU.cpp  CPU.h  Instruction.cpp  Instruction.h  Memory.cpp  Memory.h  RawBytecode.cpp  RawBytecode.h  Storage.cpp  Storage.h  main.cpp  opcodes.h  types.h
